--- a/index(7).html
+++ b/index(7).html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>restaurante chique e rústico</h1>
-
+    <img id="por fora" src="por fora.jpg">;
     <h2>francy restaurat</h2>
     
     <p>Um belíssimo restaurante, no centro de prudentópolis, em frente ao parque. Aberto das cinco da tarde até as onze horas da noite, e com delivery. Com variados tipos de comidas das mais simples como feijão e arroz, até as mais sofisticadas como picanha, alagostin, vieras, etc.</p> 
