--- a/index(7).html
+++ b/index(7).html
@@ -29,7 +29,7 @@
     <h2>francy restaurat</h2>
     
     <p>Um belíssimo restaurante, no centro de prudentópolis, em frente ao parque.
-     <p><strong>das cinco da tarde até as onze horas da noite, e com delivery. Com variados tipos de comidas das mais simples como feijão e arroz, até as mais sofisticadas como picanha, alagostin, vieras, etc.</strong></p>
+     <p><strong>Das cinco da tarde até as onze horas da noite, e com delivery. Com variados tipos de comidas das mais simples como feijão e arroz, até as mais sofisticadas como picanha, alagostin, vieras, etc.</strong></p>
     <p>Temos um cardápio para os veganos e vegetarianos.</p>
     <p>Nosso estabelecimento, traz um aspecto rústico e inovador ao mesmo tempo. Com paredes de imbuia pura, rodas de carroça trazformandas em belícimos cadeiras, mantas de trico, feitas a mão espalhadas pelo estabelecimento, um lindo balanço rodeados de flores vivas, para você e sua familia ou amigos tirarem muitas fotos.</p>
     <p>Temos a tecnológia de ponta, onde não temos garçons, mas sim, tablets de última geração onde fazem os pedidos.</p>
