--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>Temos a tecnológia de ponta, onde não temos garçons, mas sim, tablets de última geração onde fazem os pedidos.</p>
     <p>Você encontra apenas no Francy Restaurant, o melhor open bar da cidade, com muitos e muitos tipos de caipira, batida, pinga, cervejas, sucos, e refrigerantes...</p>
     <p>nosso restaurante você pode apreciar uma lindissíma vista do por do sol.</p>
-    <p><em><strong>conferir todas essas inovações, prezamos pelo seu momento.</strong></em></p>
+    <p><strong><em>todas essas inovações, prezamos pelo seu momento.</em></strong></p>
       
 </body>
 </html>
